--- a/DigiClass/index.html
+++ b/DigiClass/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Digi-Class</title>
+  <title>DigiClass</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<center><h1>Welcome To Digi-Class</h1></center>
+<center>
+  <div class="home">  
+  <img src="DG.png" height="300px"><br><br>
+  <button class="login">Login</button>
+  <button class="signup">Sign Up</button>
+  </div>
+</center>
 </body>
 </html>
